--- a/Back/.env
+++ b/Back/.env
@@ -1,9 +1,26 @@
-DATABASE_URL=postgresql://postgres:admin@postgres:5432/postgres
+# Database
+DATABASE_URL=postgresql://postgres:admin@postgres:5432/recepti_db
+
+# Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
-JWT_SECRET_KEY=neka_tajna_rec
-MAIL_SERVER=smtp.mailtrap.io
+
+# JWT
+JWT_SECRET_KEY=moj_jwt_secret_za_projekat_2025
+
+# Flask
+FLASK_APP=run.py
+FLASK_ENV=production
+SECRET_KEY=moj_flask_secret
+
+# Email (simulacija)
+MAIL_SERVER=localhost
 MAIL_PORT=2525
-MAIL_USERNAME=tvoj_username
-MAIL_PASSWORD=tvoj_password
-MAIL_USE_TLS=True
+MAIL_USE_TLS=False
+MAIL_USERNAME=test@recepti.com
+MAIL_PASSWORD=test123
+
+# Upload
+UPLOAD_FOLDER=./uploads
+MAX_CONTENT_LENGTH=16777216  # 16MB
+ALLOWED_EXTENSIONS=png,jpg,jpeg,gif,webp
